<resources>
    <string name="app_name">Flags Challenge</string>

    <string name="lbl_flag_challenge">FLAGS CHALLENGE</string>
    <string name="lbl_challenge_schedule">CHALLENGE SCHEDULE</string>
    <string name="lbl_hour">Hour(1-24)</string>
    <string name="lbl_minute">Minute</string>
    <string name="lbl_second">Second</string>


    <string name="btn_save">Save</string>

    <!--  Flag challenge page  -->
    <string name="lbl_will_start_in">CHALLENGE WILL START IN</string>
    <string name="lbl_question">Question</string>
    <string name="lbl_guess_the_name">Guess the country from the flag?</string>
    <string name="lbl_name">name</string>
    <string name="lbl_correct">Correct</string>
    <string name="lbl_wrong">Wrong</string>
    <string name="lbl_game_over">GAME OVER</string>
    <string name="lbl_score">Score :</string>
    <string name="lbl_back">Back</string>

</resources>