<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/backgroundColor"
        tools:context=".ui.SetTimerActivity">

        <!-- Top Orange Header Background -->
        <View
            android:id="@+id/top_header_bg"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:background="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Main Content Card -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/schedule_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="@color/cardBackgroundColor"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_header_bg"
            app:layout_constraintVertical_bias="0.2"
            app:strokeColor="@color/strokeColor"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="32dp">
                <!--
                            android:background="@drawable/rounded_input_background"-->


                <!--  <TextView
                      android:id="@+id/timer_display"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="00:10"
                      android:textSize="20sp"
                      android:textStyle="bold"
                      android:textColor="@android:color/white"
                      android:background="#333333"
                      android:paddingStart="16dp"
                      android:paddingEnd="16dp"
                      android:paddingTop="8dp"
                      android:paddingBottom="8dp"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
                       />-->


                <!-- Title: FLAGS CHALLENGE -->

                <!-- Subtitle: CHALLENGE SCHEDULE -->
                <TextView
                    android:id="@+id/title_flags_challenge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/_14sdp"
                    android:text="@string/lbl_flag_challenge"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/divider_background"
                    app:layout_constraintTop_toBottomOf="@+id/title_flags_challenge"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <TextView
                    android:id="@+id/subtitleChallengeSchedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:text="@string/lbl_challenge_schedule"
                    android:textColor="@color/text_other_color"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_flags_challenge" />

                <!-- Time Input Section -->
                <!--   <LinearLayout
                       android:id="@+id/time_input_layout"
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal"
                       android:gravity="center"
                       android:layout_marginTop="24dp"
                       android:paddingStart="16dp"
                       android:paddingEnd="16dp"
                       app:layout_constraintTop_toBottomOf="@id/subtitleChallengeSchedule"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintEnd_toEndOf="parent">-->

                <!-- Hour Input Group -->

                <TextView
                    android:id="@+id/tvHour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/lbl_hour"
                    android:textColor="@color/color666666"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintEnd_toEndOf="@+id/inputHourTwo"
                    app:layout_constraintStart_toStartOf="@+id/inputHourOne"
                    app:layout_constraintTop_toBottomOf="@+id/subtitleChallengeSchedule" />

                <EditText
                    android:id="@+id/inputHourOne"
                    android:layout_width="@dimen/_31sdp"
                    android:layout_height="@dimen/_31sdp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:background="@drawable/rounded_input_background"
                    android:gravity="center"
                    android:hint="0"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="1"
                    android:paddingStart="12dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="2dp"
                    android:textColor="@color/text_field_color"
                    android:textColorHint="#AAAAAA"
                    android:textCursorDrawable="@color/black"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="@+id/inputMinuteOne"
                    app:layout_constraintEnd_toStartOf="@+id/inputHourTwo"
                    app:layout_constraintTop_toBottomOf="@+id/tvHour"
                    tools:text="0" />

                <EditText
                    android:id="@+id/inputHourTwo"
                    android:layout_width="@dimen/_31sdp"
                    android:layout_height="@dimen/_31sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/rounded_input_background"
                    android:gravity="center"
                    android:hint="0"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="1"
                    android:paddingStart="12dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="2dp"
                    android:textColor="@color/text_field_color"
                    android:textColorHint="#AAAAAA"
                    android:textCursorDrawable="@color/black"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/inputMinuteOne"
                    app:layout_constraintTop_toBottomOf="@+id/tvHour"
                    app:layout_constraintTop_toTopOf="@+id/inputMinuteOne"
                    tools:text="0" />

                <!-- Minute Input Group -->

                <TextView
                    android:id="@+id/tvMinute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/lbl_minute"
                    android:textColor="@color/color666666"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/subtitleChallengeSchedule" />

                <EditText
                    android:id="@+id/inputMinuteOne"
                    android:layout_width="@dimen/_31sdp"
                    android:layout_height="@dimen/_31sdp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginEnd="@dimen/_1sdp"
                    android:background="@drawable/rounded_input_background"
                    android:gravity="center"
                    android:hint="0"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/text_field_color"
                    android:textColorHint="#AAAAAA"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/inputMinuteTwo"
                    app:layout_constraintStart_toStartOf="@+id/tvMinute"
                    app:layout_constraintTop_toBottomOf="@+id/tvMinute"
                    tools:text="0" />

                <EditText
                    android:id="@+id/inputMinuteTwo"
                    android:layout_width="@dimen/_31sdp"
                    android:layout_height="@dimen/_31sdp"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/rounded_input_background"
                    android:gravity="center"
                    android:hint="0"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/text_field_color"
                    android:textColorHint="#AAAAAA"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/tvMinute"
                    app:layout_constraintStart_toEndOf="@+id/inputMinuteOne"
                    app:layout_constraintTop_toBottomOf="@+id/tvMinute"
                    tools:text="0" />

                <!--
                                android:paddingStart="12dp"
                                android:paddingEnd="12dp"
                                android:paddingTop="2dp"
                                android:paddingBottom="2dp"-->

                <!-- Second Input Group -->


                <TextView
                    android:id="@+id/tvSecond"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/lbl_second"
                    android:textColor="@color/color666666"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintEnd_toEndOf="@+id/inputSecondTwo"
                    app:layout_constraintStart_toStartOf="@+id/inputSecondOne"
                    app:layout_constraintTop_toBottomOf="@+id/subtitleChallengeSchedule" />

                <EditText
                    android:id="@+id/inputSecondOne"
                    android:layout_width="@dimen/_31sdp"
                    android:layout_height="@dimen/_31sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_2sdp"
                    android:background="@drawable/rounded_input_background"
                    android:gravity="center"
                    android:hint="0"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/text_field_color"
                    android:textColorHint="#AAAAAA"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="@+id/inputMinuteTwo"
                    app:layout_constraintStart_toEndOf="@+id/inputMinuteTwo"
                    app:layout_constraintTop_toBottomOf="@+id/tvSecond"
                    tools:text="0" />

                <EditText
                    android:id="@+id/inputSecondTwo"
                    android:layout_width="@dimen/_31sdp"
                    android:layout_height="@dimen/_31sdp"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:background="@drawable/rounded_input_background"
                    android:gravity="center"
                    android:hint="0"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/text_field_color"
                    android:textColorHint="#AAAAAA"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="@+id/inputMinuteTwo"
                    app:layout_constraintStart_toEndOf="@+id/inputSecondOne"
                    app:layout_constraintTop_toBottomOf="@+id/tvSecond"
                    tools:text="0" />
                <!--            </LinearLayout>-->

                <!-- Save Button -->
                <Button
                    android:id="@+id/buttonSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:backgroundTint="@color/orange"
                    android:paddingStart="@dimen/_34sdp"
                    android:paddingEnd="@dimen/_34sdp"
                    android:text="@string/btn_save"
                    android:textColor="@android:color/white"
                    app:cornerRadius="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/inputMinuteOne" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
