<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.flagschallenge.ui.viewmodels.FlagChallengeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/backgroundColor"
        tools:context=".ui.FlagChallengeActivity">

        <!-- Top Orange Header Background -->
        <View
            android:id="@+id/top_header_bg"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:background="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Main Content Card -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/schedule_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="@color/cardBackgroundColor"
            app:cardCornerRadius="@dimen/_3sdp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_header_bg"
            app:layout_constraintVertical_bias="0.2"
            app:strokeColor="@color/strokeColor"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/_160sdp"
                android:paddingBottom="@dimen/_25sdp">

                <TextView
                    android:id="@+id/timerDisplay"
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_rounded_black"
                    android:paddingTop="@dimen/_6sdp"
                    android:paddingBottom="@dimen/_7sdp"
                    android:gravity="center_horizontal"
                    android:text="00:10"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/title_flags_challenge"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_32sdp"
                    android:paddingTop="@dimen/_14sdp"
                    android:text="@string/lbl_flag_challenge"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/divider_background"
                    app:layout_constraintTop_toBottomOf="@+id/title_flags_challenge"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <LinearLayout
                    android:id="@+id/llStartTimerAlert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_flags_challenge">

                    <TextView
                        android:id="@+id/subtitleChallengeSchedule"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_36sdp"
                        android:text="@string/lbl_will_start_in"
                        android:textColor="@color/text_other_color"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/title_flags_challenge" />

                    <TextView
                        android:id="@+id/tvTimer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="00:00"
                        android:textColor="@color/timer_color"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/subtitleChallengeSchedule" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/llStartTimerAlert"
                    tools:visibility="visible">
                    <!--                    app:layout_constraintTop_toBottomOf="@id/title_flags_challenge">-->


                    <TextView
                        android:id="@+id/tvQuestionNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:background="@drawable/bg_rounded_black"
                        android:backgroundTint="@color/orange"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingTop="@dimen/_3sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_3sdp"
                        android:text="0"
                        android:textColor="@color/text_color_white"
                        android:textSize="@dimen/_11ssp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/tvQuestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:text="@string/lbl_guess_the_name"
                        android:textColor="@color/text_other_color"
                        android:textSize="@dimen/_11ssp"
                        app:layout_constraintStart_toEndOf="@+id/tvQuestionNo"
                        app:layout_constraintTop_toTopOf="@+id/tvQuestionNo"
                        app:layout_constraintBottom_toBottomOf="@+id/tvQuestionNo"/>

                    <ImageView
                        android:id="@+id/imgCountryFlag"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:src="@color/orange"
                        app:layout_constraintStart_toStartOf="@+id/tvQuestionNo"
                        app:layout_constraintTop_toBottomOf="@+id/tvQuestionNo" />


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvCountryList"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:layout_constraintBottom_toBottomOf="@+id/imgCountryFlag"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imgCountryFlag"
                        app:layout_constraintTop_toTopOf="@+id/imgCountryFlag"
                        app:spanCount="2"
                        tools:itemCount="4"
                        tools:listitem="@layout/layout_country_list" />

                    <!--<TextView
                        android:id="@+id/tvAnswer1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:paddingBottom="3dp"
                        android:background="@drawable/bg_border_rounded_black"
                        android:gravity="center"
                        android:text="@string/lbl_name"
                        android:textColor="@color/text_other_color"
                        android:textSize="@dimen/_11ssp"
                        app:layout_constraintEnd_toStartOf="@+id/tvAnswer3"
                        app:layout_constraintStart_toEndOf="@+id/imgCountryFlag"
                        app:layout_constraintTop_toTopOf="@+id/imgCountryFlag" />

                    <TextView
                        android:id="@+id/tvAnswer2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:paddingBottom="3dp"
                        android:background="@drawable/bg_border_rounded_black"
                        android:gravity="center"
                        android:text="@string/lbl_name"
                        android:textColor="@color/text_other_color"
                        android:textSize="@dimen/_11ssp"
                        app:layout_constraintBottom_toBottomOf="@+id/imgCountryFlag"
                        app:layout_constraintEnd_toStartOf="@+id/tvAnswer4"
                        app:layout_constraintStart_toEndOf="@+id/imgCountryFlag" />

                    <TextView
                        android:id="@+id/tvAnswer3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:paddingBottom="3dp"
                        android:background="@drawable/bg_border_rounded_black"
                        android:gravity="center"
                        android:text="@string/lbl_name"
                        android:textColor="@color/text_other_color"
                        android:textSize="@dimen/_11ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tvAnswer1"
                        app:layout_constraintTop_toTopOf="@+id/tvAnswer1" />

                    <TextView
                        android:id="@+id/tvAnswer4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:paddingBottom="3dp"
                        android:background="@drawable/bg_border_rounded_black"
                        android:gravity="center"
                        android:text="@string/lbl_name"
                        android:textColor="@color/text_other_color"
                        android:textSize="@dimen/_11ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tvAnswer2"
                        app:layout_constraintTop_toTopOf="@+id/tvAnswer2" />-->


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/llAnswerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/clQuestion">

                    <TextView
                        android:id="@+id/tvChallengeDone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:text="@string/lbl_game_over"
                        android:textColor="@color/text_game_over"
                        android:textSize="@dimen/_23ssp"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/tvChallengeScoreLBL"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_score"
                        android:textColor="@color/orange"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal"
                        app:layout_constraintEnd_toStartOf="@+id/tvChallengeScore"
                        app:layout_constraintStart_toStartOf="@+id/tvChallengeDone"
                        app:layout_constraintTop_toTopOf="@id/tvChallengeScore"
                        app:layout_constraintBottom_toBottomOf="@+id/tvChallengeScore"/>

                    <TextView
                        android:id="@+id/tvChallengeScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:text="0/0"
                        android:textColor="@color/text_game_over"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal"
                        app:layout_constraintEnd_toEndOf="@+id/tvChallengeDone"
                        app:layout_constraintStart_toEndOf="@+id/tvChallengeScoreLBL"
                        app:layout_constraintTop_toBottomOf="@id/tvChallengeDone" />

                    <TextView
                        android:id="@+id/tvChallengeBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:text="@string/lbl_back"
                        android:textColor="@color/text_game_over"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvChallengeScore" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>